--- a/pytest.ini
+++ b/pytest.ini
@@ -36,6 +36,8 @@ markers =
     performance: mark as performance test
     memory: mark as memory usage test
     security: mark as security test
+    stress: mark as stress test (high load testing)
+    load: mark as load testing (concurrent user simulation)
 filterwarnings =
     ignore::DeprecationWarning
     ignore::PendingDeprecationWarning
