--- a/requirements.txt
+++ b/requirements.txt
@@ -22,9 +22,11 @@ requests>=2.31.0
 beautifulsoup4>=4.12.0
 
 # Alpaca Markets Integration
-alpaca-trade-api>=3.0.0
 alpaca-py>=0.13.0
 websockets>=11.0.0
+
+# Visualization
+plotly>=5.17.0
 
 # Feature Engineering
 ta>=0.10.0
