Enhance data handling and configuration for mixed portfolios
- Updated .gitignore to include new data directories for raw and processed data.
- Modified DataConfig in config.py to add a new field for processed data directory.
- Changed output directory in unified_config.yaml to point to the new processed data location.
- Updated documentation to reflect changes in data saving paths for standardized datasets.
- Introduced new examples for automatic crypto alignment and mixed portfolio handling.
- Implemented a comprehensive market calendar system to manage trading hours for mixed assets.
- Enhanced timestamp normalization and alignment strategies for better data consistency.

--- a/configs/unified_config.yaml
+++ b/configs/unified_config.yaml
@@ -54,7 +54,7 @@ data:
   cache_dir: "data/cache"
   cache_ttl_hours: 24
   data_path: "data/"
-  output_dir: "outputs/datasets"
+  output_dir: "data/processed" # Changed from "outputs/datasets"
 
   # Performance settings
   max_workers: 4
