Enhance data pipeline with sentiment analysis integration and robust fallback mechanisms
- Updated .env to include a new NEWSAPI_KEY for sentiment analysis.
- Introduced a new PIPELINE_ENHANCEMENT_SUMMARY.md file detailing the unified pipeline command and sentiment analysis features.
- Added test scripts for the enhanced pipeline command and sentiment fallback mechanisms.
- Enhanced the data configuration to retain all crypto data and fill traditional assets during weekends/holidays.
- Improved error handling and fallback strategies for sentiment analysis to ensure resilience during API failures.
- Streamlined the directory structure for better organization of raw, sentiment, and processed data.
- Updated unified_config.yaml to reflect new settings for mixed portfolio handling and sentiment features.

--- a/configs/unified_config.yaml
+++ b/configs/unified_config.yaml
@@ -61,6 +61,13 @@ data:
   chunk_size: 1000
   use_memory_mapping: true
 
+  # Market calendar and mixed portfolio handling
+  align_mixed_portfolios: true
+  alignment_strategy: "last_known_value" # Strategy for filling traditional assets
+  retain_all_crypto_data: true # NEW: Retain all crypto candles
+  market_timezone: "America/New_York"
+  include_extended_hours: false
+
 # ============================================================================
 # MODEL CONFIGURATION
 # ============================================================================
