--- a/configs/cnn_lstm_training.yaml
+++ b/configs/cnn_lstm_training.yaml
@@ -122,6 +122,12 @@ hyperopt:
     cnn_filters:
       type: "categorical"
       choices: [[32, 64], [64, 128], [64, 128, 256]]
+    sequence_length:
+      type: "categorical"
+      choices: [20, 30, 60, 90, 120]
+    prediction_horizon:
+      type: "categorical"
+      choices: [1, 3, 5, 10, 20]
 
 # Evaluation Configuration
 evaluation:
