--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 # Core dependencies
-numpy>=1.24.0
+numpy<2.0.0,>=1.24.0
 pandas>=2.0.0
 scikit-learn>=1.3.0
 matplotlib>=3.7.0
@@ -22,8 +22,8 @@ requests>=2.31.0
 beautifulsoup4>=4.12.0
 
 # Alpaca Markets Integration
-alpaca-py>=0.13.0
-websockets>=11.0.0
+alpaca-py>=0.13.1
+websockets==11.0.3
 
 # Visualization
 plotly>=5.17.0
@@ -38,7 +38,7 @@ empyrical>=0.5.5
 pyyaml>=6.0
 typer[all]>=0.9.0
 click>=8.1.0
-rich>=13.0.0
+rich~=13.5.2
 
 # Monitoring and Logging
 mlflow>=2.6.0
