--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,11 +36,11 @@ dependencies = [
     "pyarrow<21.0.0",
     "protobuf<5.0",
     "seaborn>=0.13.0",
-    "vaderSentiment>=3.4.0",
+    "vaderSentiment>=3.3.2",
     "structlog>=23.1.0",
     "pydantic_settings>=2.0.0",
     "tqdm>=4.66.1",
-    "pandas_ta>=0.4.0",
+    "pandas_ta>=0.3.14b0",
     "ccxt>=4.1.0",
 ]
 
