--- a/requirements.txt
+++ b/requirements.txt
@@ -81,7 +81,7 @@ pathlib2>=2.3.0
 psutil>=5.9.0
 
 # Sentiment Analysis
-vaderSentiment>=3.3.2
+vaderSentiment>=3.3.2,<3.4.0
 
 # Statistical Modeling
 statsmodels>=0.14.0
