feat: Enhance CNN-LSTM training with configuration validation and error handling
- Added a configuration validation method to ensure model and training parameters are correctly set.
- Improved tensor handling in training and validation phases to avoid shape issues.
- Introduced coordinated CNN architectures for better hyperparameter optimization.
- Enhanced the hyperparameter optimization process with detailed progress indicators and error handling.
- Created test scripts to validate basic pipeline functionality, optimization fixes, and training components.
- Added a demo script to showcase the new progress indicators during optimization.

--- a/mypy.ini
+++ b/mypy.ini
@@ -54,3 +54,40 @@ ignore_missing_imports = true
 # Use pandas-stubs for better type checking
 [mypy-pandas.*]
 ignore_missing_imports = true
+
+# External library stubs
+[mypy-ccxt.*]
+ignore_missing_imports = true
+
+[mypy-alpha_vantage.*]
+ignore_missing_imports = true
+
+[mypy-hmmlearn.*]
+ignore_missing_imports = true
+
+[mypy-sklearn.*]
+ignore_missing_imports = true
+
+[mypy-pandas_ta.*]
+ignore_missing_imports = true
+
+[mypy-jwt.*]
+ignore_missing_imports = true
+
+[mypy-fastapi.*]
+ignore_missing_imports = true
+
+[mypy-uvicorn.*]
+ignore_missing_imports = true
+
+[mypy-yaml.*]
+ignore_missing_imports = true
+
+[mypy-structlog.*]
+ignore_missing_imports = true
+
+[mypy-alpaca.*]
+ignore_missing_imports = true
+
+[mypy-alpaca_trade_api.*]
+ignore_missing_imports = true
