Add training CLI commands for CNN+LSTM, RL agents, hybrid models, and hyperparameter optimization
- Implemented a new CLI module for training various models including CNN+LSTM, reinforcement learning agents, and hybrid models.
- Added commands for training CNN+LSTM with options for hyperparameter optimization.
- Introduced a command for training reinforcement learning agents with configurable parameters.
- Created a command for hybrid training that combines CNN+LSTM with RL agents.
- Added functionality for hyperparameter optimization using Optuna.
- Removed deprecated training CLI code and associated test files.

--- a/mutmut.cfg
+++ b/mutmut.cfg
@@ -18,7 +18,7 @@ exclude=(
     */examples/*,
     */docs/*,
     */configs/*,
-    */cli.py,
+    */cli/*,
     */main.py,
     */setup.py,
     */conftest.py,
