--- a/.gitignore
+++ b/.gitignore
@@ -1,197 +1,20 @@
-# Python bytecode
-__pycache__/
-*.py[cod]
-*$py.class
-
-# Virtual environments
-venv/
-env/
-.venv/
-
-# Distribution / packaging
-build/
-dist/
-*.egg-info/
-
-# Logs
-*.log
-
-# IDE/Editor
-.vscode/
-*.swp
-*.tmp
-*.temp
-
-# OS-specific
-.DS_Store
-Thumbs.db
-
-# Jupyter
-.ipynb_checkpoints/
-*.ipynb_outputs/
-
-# Testing
-.pytest_cache/
-.coverage
-coverage.json
-coverage.xml
-test-report.json
-test-report.md
-test-results.xml
-.coveragerc_temp
-
-# Mock directories (test artifacts)
-<Mock*/
-<MagicMock*/
-
-# Node modules and cache files
-node_modules/
-.cache/
-
-# Data
-/data/
-/data/raw/
-/data/processed/
-outputs/
-demo_outputs/
-backtest_results/
-test_data/
-
-# ML/AI Training Outputs
-models/
-*.pth
-*.pt
-*.pkl
-*.ckpt
-checkpoints/
-rl_checkpoints/
-
-# Hyperparameter Optimization
-optimization_results/
-ray_results/
-wandb/
-wandb-summary.json
-*.wandb
-
-# Training Logs and Metrics
-logs/
-tensorboard_logs/
-mlruns/
-*.log
-training_*.json
-hparam_*.json
-hparam_*.csv
-*_trials_*.csv
-best_*_config_*.json
-*_results_*.json
-experiment_*.json
-results_archive/
-
-# Temporary Training Files
-temp_model_*
-experiment_*_*/
-tune_*_*/
-*_hparam_*/
-
-# Docker
-.Dockerfile*
-docker-compose*.yml
-
-# Kubernetes manifests
-yaml
-
-# Documentation build
-docs/_build/
-docs/_autosummary/
-*.doctree
-*.json
-*_errors.json
-ruff_*.json
-
-# Environment files
+# Environment variables
 .env
-.env.*
-!.env.example
 
-# Backup and temporary files
-*.bak
-*.orig
-*.rej
-*.tmp
-*.temp
-*~
-
-# IDE and editor files
+# Visual Studio Code settings
 .vscode/
-.idea/
-*.swp
-*.swo
-*~
 
-# OS generated files
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
+# Roo Code workspace settings
+.roo/
 
-# Cursor IDE
-.cursor/
+# Internal git files
+.git/
+.github/
 
-# Benchmark results
-.benchmarks/
+# Devcontainer build files
+.devcontainer/
+Dockerfile
 
-# Ruff cache
-.ruff_cache/
-
-# MyPy cache
-.mypy_cache/
-
-# Coverage reports
-htmlcov/
-
-# Generated reports and dashboards
-*_dashboard.html
-*_report.html
-*_report.txt
-attribution_*.html
-attribution_*.txt
-data_quality_*.html
-
-# Preserve important documentation
-!README*.md
-!TODO.md
-!PROJECT_STATUS.md
-!DOCUMENTATION_UPDATE_SUMMARY.md
-!ENV_VARIABLES_INTEGRATION_SUMMARY.md
-!DEPENDENCY_MANAGEMENT.md
-!ALPACA_INTEGRATION_SUMMARY.md
-!TRANSACTION_COST_MODELING_IMPLEMENTATION.md
-!CLI_COVERAGE_IMPROVEMENT_SUMMARY.md
-!DATA_STANDARDIZATION_GUIDE.md
-!CLEANUP_SUMMARY.md
-!DEMO_README.md
-!README_CLI_USAGE.md
-
-# Generated images and plots
-*.png
-*.jpg
-*.jpeg
-*.gif
-*.svg
-
-# Version files (appear to be generated)
-=*.0
-=*.0.0
-
-# Samples directory (appears to be generated content)
-samples/
-
-# Runs directory (MLflow/training runs)
-runs/
-
-# Config cache (but keep important configs)
-config/
-!configs/
+# Node modules
+/node_modules/
+/.node_modules
