--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,11 +3,11 @@ repos:
     rev: v5.0.0
     hooks:
       - id: trailing-whitespace
-        exclude: ^(docs/_build/|\.doctrees/|\.buildinfo$|searchindex\.js$)
+        exclude: ^(docs/_build/|\.doctrees/|\.buildinfo$|searchindex\.js$|node_modules/)
       - id: end-of-file-fixer
-        exclude: ^(docs/_build/|\.doctrees/|\.buildinfo$|searchindex\.js$)
+        exclude: ^(docs/_build/|\.doctrees/|\.buildinfo$|searchindex\.js$|node_modules/)
       - id: check-yaml
-        exclude: ^(k8s/|docs/_build/|\.doctrees/|\.buildinfo$|searchindex\.js$)
+        exclude: ^(k8s/|docs/_build/|\.doctrees/|\.buildinfo$|searchindex\.js$|node_modules/)
       - id: check-added-large-files
         args: ["--maxkb=50000"] # 50MB max
       - id: check-ast
@@ -17,7 +17,7 @@ repos:
       - id: debug-statements
       - id: detect-private-key
       - id: mixed-line-ending
-        exclude: ^(docs/_build/|\.doctrees/|\.buildinfo$|searchindex\.js$)
+        exclude: ^(docs/_build/|\.doctrees/|\.buildinfo$|searchindex\.js$|node_modules/)
       - id: check-json
         exclude: ^(coverage\.json)$
       - id: check-toml
@@ -74,7 +74,7 @@ repos:
     hooks:
       - id: prettier
         files: \.(yaml|yml|md|json|css|scss|html|js|ts|jsx|tsx)$
-        exclude: ^(\.github/|docs/_build/|coverage\.json|test-results\.xml)
+        exclude: (^(\.github/|docs/_build/|coverage\.json|test-results\.xml)|node_modules/)
 
   - repo: https://github.com/nbQA-dev/nbQA
     rev: 1.9.1
