--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 .git/
 .github/
 
+
 # Devcontainer build files
 .devcontainer/
 Dockerfile
@@ -18,3 +19,57 @@ Dockerfile
 # Node modules
 /node_modules/
 /.node_modules
+
+# Documentation build artifacts
+docs/_build/
+docs/build/
+site/
+_site/
+
+# Temporary files
+*.tmp
+*.temp
+*.log
+*.bak
+*.swp
+*.swo
+*~
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# IDE files
+*.sublime-project
+*.sublime-workspace
+.idea/
+*.iml
+
+# Python cache and build files
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
